# python-duckdb-dbt

./: pyproject.toml
