[tool.poetry]
name = "python-duckdb-dbt"
version = "0.1.0"
description = ""
authors = ["Luciano Borba <luhborbafilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^0.10.0"
google-cloud-bigquery = "^3.17.2"
google-auth = "^2.28.0"
google-cloud-bigquery-storage = "^2.24.0"
pyarrow = "^15.0.0"
pandas = "^2.2.0"
fire = "^0.5.0"
loguru = "^0.7.2"
pydantic = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
